--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="text/javascript" src="./dist/TagCloud.min.js"></script>
+
   <!-- emailjs -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
   </script>
