--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
       crossorigin="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BioRhyme:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=BioRhyme:wght@700&family=Source+Sans+Pro:ital,wght@1,600&display=swap"
+      rel="stylesheet">
+
+
     <title>Yasin Billah</title>
   </head>
 
@@ -35,6 +45,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script type="text/javascript" src="./dist/TagCloud.min.js"></script>
+  <script src="https://apis.google.com/js/platform.js"></script>
 
   <!-- emailjs -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
