--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
   <script type="text/javascript">
 
     (function () {
-      emailjs.init('user_vPWyssKMcDeGjbAX7GYhU');
+      emailjs.init(process.env.REACT_APP_EMAIL_JS_USER);
     })();
   </script>
 </body>
